--- a/_notebooks/2023-08-16-linux_shell.ipynb
+++ b/_notebooks/2023-08-16-linux_shell.ipynb
@@ -829,30 +829,80 @@
     "## Hack Preparation.\n",
     "> Review Tool Setup Procedures and think about some thing you could verify through a Shell notebook.\n",
     "- Come up with your own student view of this procedure to show your tools are installed.\n",
+    "\n",
+    "View lower code box\n",
+    "\n",
     "- Name and create notes on some Linux commands you will use frequently.\n",
+    "\n",
+    "cd - to change current directory\n",
+    "pwd - print working directory\n",
+    "ls - lists current directory\n",
+    "echo - prints a message in \"\"\n",
+    "\n",
     "- Is there anything we use to verify tools we install? Review versions checks.\n",
+    "\n",
+    "To verify tools we've installed, we check the version numbers to see that everything is there and up to date. \n",
+    "\n",
     "- Is there anything we could verify with Anaconda?  or WSL?  \n",
-    "- How would you update a repository?  Could you do that in script above?\n"
+    "\n",
+    "No, we can't verify anything with Anaconda or WSL because they are apps and cannot be determined by a line of code.\n",
+    "\n",
+    "- How would you update a repository?  Could you do that in script above?\n",
+    "\n",
+    "You can update a repository by using the git pull command, which can change the branches of your directory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ruby 3.1.4p223 (2023-03-30 revision 957bb7cb81) [arm64-darwin21]\n",
+      "Selected Jupyter core packages...\n",
+      "IPython          : 8.12.2\n",
+      "ipykernel        : 6.25.0\n",
+      "ipywidgets       : 8.0.4\n",
+      "jupyter_client   : 7.4.9\n",
+      "jupyter_core     : 5.3.0\n",
+      "jupyter_server   : 1.23.4\n",
+      "jupyterlab       : 3.6.3\n",
+      "nbclient         : 0.5.13\n",
+      "nbconvert        : 6.5.4\n",
+      "nbformat         : 5.7.0\n",
+      "notebook         : 6.5.4\n",
+      "qtconsole        : 5.4.2\n",
+      "traitlets        : 5.7.1\n",
+      "Homebrew 4.1.6\n",
+      "Homebrew/homebrew-core (git revision d5c32fe6232; last commit 2023-08-25)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ruby -v\n",
+    "jupyter --version\n",
+    "brew --version"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Bash",
+   "language": "bash",
+   "name": "bash"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "codemirror_mode": "shell",
+   "file_extension": ".sh",
+   "mimetype": "text/x-sh",
+   "name": "bash"
   },
   "vscode": {
    "interpreter": {
