--- a/2023-09-11-Daily_Plan_4.md
+++ b/2023-09-11-Daily_Plan_4.md
@@ -16,7 +16,7 @@ courses: { compsci: {week: 4} }
 
 - Wednesday - With my team of 4, create our Agile Methodology
 
-- Thursday - Chill work days
+- Thursday - Chill work day
 
 - Friday - Python/Flask in Jupyter
 
