--- a/_notebooks/2023-09-12-python-flask-anatomy.ipynb
+++ b/_notebooks/2023-09-12-python-flask-anatomy.ipynb
@@ -12,7 +12,7 @@
     "description: A discussion of key elements in a Python Flask backend project.  This includes preparing a project for deployment.\n",
     "courses: { csp: {week: 5, categories: [6.B]} }\n",
     "categories: [C4.0]\n",
-    "type: devops\n",
+    "type: hacks\n",
     "---"
    ]
   },
@@ -146,17 +146,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Java",
-   "language": "java",
-   "name": "java"
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "python",
    "pygments_lexer": "java",
-   "version": "17.0.3+7"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
