--- a/_notebooks/2023-08-30-basics-js-data-types.ipynb
+++ b/_notebooks/2023-08-30-basics-js-data-types.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: Javascript Data Types/Lists (In Progress)\n",
+    "title: Javascript Data Types/Lists\n",
     "hide: True\n",
     "description: A Tech Talk on javascript data types and how to use with lists\n",
     "type: ccc\n",
@@ -89,8 +89,7 @@
     }
    ],
    "source": [
-    "%%html\n",
-    "<script>\n",
+    "%%js\n",
     "\n",
     "// assign variable\n",
     "var hello = \"Hello World\";\n",
@@ -103,7 +102,28 @@
     "\n",
     "// add strings together\n",
     "console.log(\"string concatenation: hello + Rohan!\")\n",
-    "console.log(hello + \" Rohan!\")\n",
+    "console.log(hello + \" Rohan!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## .substring()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%js\n",
+    "var hello = \"Hello World\";\n",
     "\n",
     "// getting a certain component of this text\n",
     "// (here the _ is a standin for the space character)\n",
@@ -112,20 +132,61 @@
     "// if we want the hello component, we want characters 0-4, so we use the following function\n",
     "// (note how we use 0 and 5 as arguments, the last character is NOT INCLUSIVE)\n",
     "console.log(\"substring: hello 0, 5\")\n",
-    "console.log(hello.substring(0, 5))\n",
+    "console.log(hello.substring(0, 5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## .toUpperCase() and .toLowerCase()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%js\n",
+    "var hello = \"Hello World\";\n",
     "\n",
     "// useful functions to make string lowercase or uppercase\n",
     "console.log(\"string convert to upper case: hello toUpperCase\")\n",
     "console.log(hello.toUpperCase())\n",
     "console.log(\"string convert to lower case: hello toLowerCase\")\n",
-    "console.log(hello.toLowerCase())\n",
+    "console.log(hello.toLowerCase())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## .includes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%js\n",
+    "var hello = \"Hello World\";\n",
     "\n",
     "// useful function to check if one string is contained in another\n",
     "console.log(\"string includes: hello includes Rohan\")\n",
     "console.log(hello.includes(\"Rohan\"))\n",
     "console.log(\"string includes: hello includes Hello\")\n",
-    "console.log(hello.includes(\"Hello\"))\n",
-    "</script>"
+    "console.log(hello.includes(\"Hello\"))"
    ]
   },
   {
@@ -196,8 +257,7 @@
     }
    ],
    "source": [
-    "%%html\n",
-    "<script>\n",
+    "%%js\n",
     "console.log(\"Numbers info\")\n",
     "\n",
     "// assign numbers to varialbes\n",
@@ -220,7 +280,33 @@
     "console.log(\"multiply: num1 * num2\")\n",
     "console.log(num1 * num2)\n",
     "console.log(\"remainder (modulo): num1 % num2\")\n",
-    "console.log(num1 % num2)\n",
+    "console.log(num1 % num2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# number formatting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%js\n",
+    "console.log(\"variable: num1\")\n",
+    "var num1 = 9\n",
+    "console.log(num1)\n",
+    "console.log(\"variable: num2\")\n",
+    "var num2 = 6\n",
+    "console.log(num2)\n",
     "\n",
     "// converting numbers to text\n",
     "console.log(\"number convert string: num1\")\n",
@@ -232,8 +318,7 @@
     "\n",
     "// rounding a number to decimal palces\n",
     "console.log(\"set decimals to 2 places (num1 / num2)\")\n",
-    "console.log((num1 / num2).toFixed(2))\n",
-    "</script>"
+    "console.log((num1 / num2).toFixed(2))"
    ]
   },
   {
@@ -297,8 +382,7 @@
     }
    ],
    "source": [
-    "%%html\n",
-    "<script>\n",
+    "%%js\n",
     "console.log(\"Array: assigning a list of strings\")\n",
     "var str1 = \"1st string\"\n",
     "var arr_data = [str1, \"2nd string\", \"3rd string\"]\n",
@@ -309,7 +393,32 @@
     "// \"A string\" \"Other Data\" \"more data\"\n",
     "//    0           1            2\n",
     "console.log(\"Array: referencing a cell #1\")\n",
-    "console.log([ arr_data[1] ])  // zero based counting: 1 is 2nd cell\n",
+    "console.log([ arr_data[1] ])  // zero based counting: 1 is 2nd cell\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# array manipulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%js\n",
+    "console.log(\"Array: assigning a list of strings\")\n",
+    "var str1 = \"1st string\"\n",
+    "var arr_data = [str1, \"2nd string\", \"3rd string\"]\n",
+    "// seeing what is in the array\n",
+    "console.log(arr_data)\n",
     "\n",
     "// adding something new to the array\n",
     "console.log(\"Array: adding to list\")\n",
@@ -324,8 +433,7 @@
     "// removing the last element of array\n",
     "console.log(\"Array: removing from end of list\")\n",
     "arr_data.pop()\n",
-    "console.log(arr_data)\n",
-    "</script>\n"
+    "console.log(arr_data)"
    ]
   },
   {
@@ -405,8 +513,47 @@
     }
    ],
    "source": [
-    "%%html\n",
-    "<script>\n",
+    "%%js\n",
+    "console.log(\"Object: assigning key-value objects\")\n",
+    "var obj = {\n",
+    "    name: \"Safin\",\n",
+    "    age: 13\n",
+    "};\n",
+    "\n",
+    "// The following is stored in the object called \"obj\"\n",
+    "// {\n",
+    "//     name: \"Safin\",\n",
+    "//     age: 13\n",
+    "// }\n",
+    "//\n",
+    "// The key \"name\" is associated with the string value \"Safin\"\n",
+    "// The key \"age\" is associated with the number value 13\n",
+    "// Notice that keys are of the type \"string\"\n",
+    "\n",
+    "// print obj to the console\n",
+    "console.log(obj);\n",
+    "// -> { name: 'Safin', age: 13 }\n",
+    "// Notice that single quotes ' and double quotes \" can be used interchangeably"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# object access"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%js\n",
     "console.log(\"Object: assigning key-value objects\")\n",
     "var obj = {\n",
     "    name: \"Safin\",\n",
@@ -448,16 +595,47 @@
     "console.log(\"Object: mutating the key name from Safin to John\")\n",
     "obj[\"ghid\"] = \"jm1021\"\n",
     "console.log(obj);\n",
-    "// Observe new key\n",
-    "</script>"
+    "// Observe new key"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hacks\n",
+    "Create a JavaScript snippet below with the following requirements:\n",
+    "- Create an object representing yourself as a person. The object should have keys for your name, age, current classes, interests, and two more of your choosing\n",
+    "- Your object must contain keys whose values are arrays. The arrays can be arrays of strings, numbers, or even other objects if you would like\n",
+    "- Print the entire object with console.log after declaring it\n",
+    "- Manipulate the arrays within the object and print the entire object with console.log as well as the specific changed key afterwards\n",
+    "- Perform mathematical operations on fields in your object such as +, -, /, % etc. and print the results with console.log along with a message contextualizing them\n",
+    "- Use typeof to determine the types of at least 3 fields in your object"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "// put your javascript code here (make sure to run it and check your outputs in the console)\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%js\n",
+    "// put your javascript code here (make sure to run it and check your outputs in the console)"
+   ]
   }
  ],
  "metadata": {
@@ -476,7 +654,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
