--- a/_notebooks/2023-08-28-basics-html.ipynb
+++ b/_notebooks/2023-08-28-basics-html.ipynb
@@ -234,32 +234,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "raw",
    "metadata": {
     "vscode": {
      "languageId": "html"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<!-- put your HTML code in this cell, Make sure to press the Run button to see your results below -->\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "%%html\n",
+    "<!-- put your HTML code in this cell, Make sure to press the Run button to see your results below -->\n",
     "\n",
-    "<!-- put your HTML code in this cell, Make sure to press the Run button to see your results below -->"
+    "<h3>Hacks:</h3>\n",
+    "<p>(My hacks for this project to showcase my progress with html)</p>\n",
+    "\n",
+    "<img alt=\"code image\" src=\"{{site.baseurl}}/images/coding.jpeg\" width=\"200\" height=\"100\">\n",
+    "\n",
+    "<a href=\"URL\">Visit my timer!</a>\n"
    ]
   }
  ],
