--- a/_notebooks/2023-08-28-basics-html.ipynb
+++ b/_notebooks/2023-08-28-basics-html.ipynb
@@ -248,7 +248,7 @@
     "\n",
     "<img alt=\"code image\" src=\"{{site.baseurl}}/images/coding.jpeg\" width=\"200\" height=\"100\">\n",
     "\n",
-    "<a href=\"URL\">Visit my timer!</a>\n"
+    "<a href=\"https://nathaniel633.github.io/student//2023/09/27/timer_IPYNB_2_.html\">Visit my timer!</a>\n"
    ]
   }
  ],
