--- a/_notebooks/2023-09-27-timer.ipynb
+++ b/_notebooks/2023-09-27-timer.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: Timer\n",
+    "title: Basic Timer\n",
     "description: A timer with Python to help my time management when studying\n",
     "toc: true\n",
     "comments: true\n",
