--- a/_notebooks/2023-08-28-basics-home.ipynb
+++ b/_notebooks/2023-08-28-basics-home.ipynb
@@ -11,6 +11,7 @@
     "description: An introduction to key topics in Web Programming\n",
     "courses: { compsci: {week: 6}}\n",
     "type: hacks\n",
+    "permalink: /basics/home\n",
     "---"
    ]
   },
