--- a/_notebooks/2023-08-28-basics-html.ipynb
+++ b/_notebooks/2023-08-28-basics-html.ipynb
@@ -246,7 +246,20 @@
     "<h3>Hacks:</h3>\n",
     "<p>(My hacks for this project to showcase my progress with html)</p>\n",
     "\n",
-    "<img alt=\"code image\" src=\"{{site.baseurl}}/images/coding.jpeg\" width=\"200\" height=\"100\">\n",
+    "<div>\n",
+    "    <p class=\"name\">For something special, why not click the button?</p>\n",
+    "    <button onclick=\"changeColor()\">Press me!</button>\n",
+    "    <script>\n",
+    "        const name = document.querySelector(\".name\");\n",
+    "        function changeColor() {\n",
+    "            name.style.color = \"blue\";\n",
+    "        }\n",
+    "    <script>\n",
+    "    <p> </p>\n",
+    "</div>\n",
+    "\n",
+    "<div>\n",
+    "\n",
     "\n",
     "<a href=\"https://nathaniel633.github.io/student//2023/09/27/timer_IPYNB_2_.html\">Visit my timer!</a>\n"
    ]
@@ -268,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
