--- a/_notebooks/2023-10-01-pomodoro_timer.ipynb
+++ b/_notebooks/2023-10-01-pomodoro_timer.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -146,13 +146,16 @@
        "  </div>\n",
        "  `;\n",
        "\n",
+       "  function playSound () {\n",
+       "    let ding = new Audio('/student/images/mixkit-classic-alarm-995.mp3');\n",
+       "    ding.play();\n",
+       "}\n",
+       "\n",
        "  function onTimesUp() {\n",
        "    clearInterval(timerInterval);\n",
        "    timeLeft = 0;\n",
        "    timePassed = 0;\n",
-       "    TIME_LIMIT = 0;\n",
-       "    let mySound = new Audio('mixkit-classic-alarm-995.wav')\n",
-       "    mySound.play()\n",
+       "    playSound();\n",
        "  }\n",
        "\n",
        "  function startTimer() {\n",
@@ -347,13 +350,16 @@
     "  </div>\n",
     "  `;\n",
     "\n",
+    "  function playSound () {\n",
+    "    let ding = new Audio('/student/images/mixkit-classic-alarm-995.mp3');\n",
+    "    ding.play();\n",
+    "}\n",
+    "\n",
     "  function onTimesUp() {\n",
     "    clearInterval(timerInterval);\n",
     "    timeLeft = 0;\n",
     "    timePassed = 0;\n",
-    "    TIME_LIMIT = 0;\n",
-    "    let mySound = new Audio('mixkit-classic-alarm-995.wav')\n",
-    "    mySound.play()\n",
+    "    playSound();\n",
     "  }\n",
     "\n",
     "  function startTimer() {\n",
