--- a/_notebooks/2023-08-28-basics-html.ipynb
+++ b/_notebooks/2023-08-28-basics-html.ipynb
@@ -246,6 +246,9 @@
     "<h3>Hacks:</h3>\n",
     "<p>(My hacks for this project to showcase my progress with html)</p>\n",
     "\n",
+    "<a href=\"https://nathaniel633.github.io/student//2023/09/27/timer_IPYNB_2_.html\">Visit my timer!</a>\n",
+    "\n",
+    "<a href=\"https://nathaniel633.github.io/student//2023/10/01/pomodoro_timer_IPYNB_2_.html\">Check out my Pomodoro timer!</a>\n",
     "<div>\n",
     "    <p class=\"name\">For something special, why not click the button?</p>\n",
     "    <button onclick=\"changeColor()\">Press me!</button>\n",
@@ -256,12 +259,10 @@
     "        }\n",
     "    <script>\n",
     "    <p> </p>\n",
-    "</div>\n",
     "\n",
-    "<div>\n",
+    "    <a href=\"https://nathaniel633.github.io/student//2023/09/27/timer_IPYNB_2_.html\">Visit my timer!</a>\n",
     "\n",
-    "\n",
-    "<a href=\"https://nathaniel633.github.io/student//2023/09/27/timer_IPYNB_2_.html\">Visit my timer!</a>\n"
+    "</div>\n"
    ]
   }
  ],
