--- a/_notebooks/2023-08-29-basics-of-js.ipynb
+++ b/_notebooks/2023-08-29-basics-of-js.ipynb
@@ -510,18 +510,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "vscode": {
-     "languageId": "javascript"
+     "languageId": "html"
     }
    },
    "outputs": [
     {
      "data": {
-      "application/javascript": "// put your javascript code here\n",
+      "text/html": [
+       "<script>\n",
+       "// put your javascript code here\n",
+       "\n",
+       "var a = 16;\n",
+       "var b = 6;\n",
+       "\n",
+       "console.log(\"Hacks: Comparing Values\");\n",
+       "if (a > b) {\n",
+       "    console.log(\"a is greater\");\n",
+       "}\n",
+       "</script>\n"
+      ],
       "text/plain": [
-       "<IPython.core.display.Javascript object>"
+       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
@@ -529,8 +541,18 @@
     }
    ],
    "source": [
-    "%%js\n",
-    "// put your javascript code here"
+    "%%html\n",
+    "<script>\n",
+    "// put your javascript code here\n",
+    "\n",
+    "var a = 16;\n",
+    "var b = 6;\n",
+    "\n",
+    "console.log(\"Hacks: Comparing Values\");\n",
+    "if (a > b) {\n",
+    "    console.log(\"a is greater\");\n",
+    "}\n",
+    "</script>"
    ]
   }
  ],
