--- a/_notebooks/2023-08-30-basics-js-with-html.ipynb
+++ b/_notebooks/2023-08-30-basics-js-with-html.ipynb
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -352,7 +352,49 @@
      "data": {
       "text/html": [
        "<!-- html code goes here (make sure to run) -->\n",
+       "<div>\n",
+       "  <body>\n",
+       "    <div>\n",
+       "        <p id=\"message\">Click the button!</p>\n",
+       "        <button class=\"projectSwitch\" id=\"projectSwitcher\">Project Switcher</button>\n",
+       "        <br>\n",
+       "        <br>\n",
+       "    </div>\n",
        "\n",
+       "    <div>\n",
+       "        <a target=\"blank\" href=\"https://nathaniel633.github.io/student//2023/09/27/timer_IPYNB_2_.html\" class=\"projectSwitch\" id=\"basicTimer\">Basic-Timer</a>\n",
+       "        <a target=\"blank\" href=\"https://nathaniel633.github.io/student//2023/10/01/pomodoro_timer_IPYNB_2_.html\" class=\"projectSwitch\" id=\"pomodoroTimer\">Pomodoro-Timer</a>\n",
+       "        <p></p>\n",
+       "    </div>\n",
+       "\n",
+       "    <script >\n",
+       "    const projectSwitch = document.getElementById('projectSwitcher');\n",
+       "    const message = document.getElementById('message');\n",
+       "    const basicButton = document.getElementById('basicTimer');\n",
+       "    const pomodoroButton = document.getElementById('pomodoroTimer');\n",
+       "    \n",
+       "    projectSwitch.addEventListener('click', function () {\n",
+       "      const basicHref = pomodoroButton.getAttribute('href');\n",
+       "      const pomodoroHref = basicButton.getAttribute('href');\n",
+       "      if (basicHref === 'https://nathaniel633.github.io/student//2023/09/27/timer_IPYNB_2_.html') {\n",
+       "        basicButton.setAttribute('href', 'https://nathaniel633.github.io/student//2023/09/27/timer_IPYNB_2_.html');\n",
+       "        pomodoroHref.setAttribute('href', 'https://nathaniel633.github.io/student//2023/10/01/pomodoro_timer_IPYNB_2_.html');\n",
+       "        basicButton.innerHTML = \"EWG\";\n",
+       "        pomodoroButton.innerHTML = \"INCIDecoder\";\n",
+       "        message.innerHTML = 'Switched!';\n",
+       "      } else {\n",
+       "        basicButton.setAttribute('href', 'https://nathaniel633.github.io/student//2023/10/01/pomodoro_timer_IPYNB_2_.html');\n",
+       "        pomodoroHref.setAttribute('href', 'https://nathaniel633.github.io/student//2023/09/27/timer_IPYNB_2_.html');\n",
+       "        pomodoroButton.innerHTML = \"EWG\";\n",
+       "        basicButton.innerHTML = \"INCIDecoder\";\n",
+       "        message.innerHTML = 'Switched Back!';\n",
+       "    \n",
+       "    \n",
+       "      }\n",
+       "    });\n",
+       "    </script>\n",
+       "</body>\n",
+       "</div>\n",
        "<script>\n",
        "  // your javascript code goes here\n",
        "</script>\n"
@@ -368,7 +410,49 @@
    "source": [
     "%%html\n",
     "<!-- html code goes here (make sure to run) -->\n",
+    "<div>\n",
+    "  <body>\n",
+    "    <div>\n",
+    "        <p id=\"message\">Click the button!</p>\n",
+    "        <button class=\"projectSwitch\" id=\"projectSwitcher\">Project Switcher</button>\n",
+    "        <br>\n",
+    "        <br>\n",
+    "    </div>\n",
     "\n",
+    "    <div>\n",
+    "        <a target=\"blank\" href=\"https://nathaniel633.github.io/student//2023/09/27/timer_IPYNB_2_.html\" class=\"projectSwitch\" id=\"basicTimer\">Basic-Timer</a>\n",
+    "        <a target=\"blank\" href=\"https://nathaniel633.github.io/student//2023/10/01/pomodoro_timer_IPYNB_2_.html\" class=\"projectSwitch\" id=\"pomodoroTimer\">Pomodoro-Timer</a>\n",
+    "        <p></p>\n",
+    "    </div>\n",
+    "\n",
+    "    <script >\n",
+    "    const projectSwitch = document.getElementById('projectSwitcher');\n",
+    "    const message = document.getElementById('message');\n",
+    "    const basicButton = document.getElementById('basicTimer');\n",
+    "    const pomodoroButton = document.getElementById('pomodoroTimer');\n",
+    "    \n",
+    "    projectSwitch.addEventListener('click', function () {\n",
+    "      const basicHref = pomodoroButton.getAttribute('href');\n",
+    "      const pomodoroHref = basicButton.getAttribute('href');\n",
+    "      if (basicHref === 'https://nathaniel633.github.io/student//2023/09/27/timer_IPYNB_2_.html') {\n",
+    "        basicButton.setAttribute('href', 'https://nathaniel633.github.io/student//2023/09/27/timer_IPYNB_2_.html');\n",
+    "        pomodoroHref.setAttribute('href', 'https://nathaniel633.github.io/student//2023/10/01/pomodoro_timer_IPYNB_2_.html');\n",
+    "        basicButton.innerHTML = \"EWG\";\n",
+    "        pomodoroButton.innerHTML = \"INCIDecoder\";\n",
+    "        message.innerHTML = 'Switched!';\n",
+    "      } else {\n",
+    "        basicButton.setAttribute('href', 'https://nathaniel633.github.io/student//2023/10/01/pomodoro_timer_IPYNB_2_.html');\n",
+    "        pomodoroHref.setAttribute('href', 'https://nathaniel633.github.io/student//2023/09/27/timer_IPYNB_2_.html');\n",
+    "        pomodoroButton.innerHTML = \"EWG\";\n",
+    "        basicButton.innerHTML = \"INCIDecoder\";\n",
+    "        message.innerHTML = 'Switched Back!';\n",
+    "    \n",
+    "    \n",
+    "      }\n",
+    "    });\n",
+    "    </script>\n",
+    "</body>\n",
+    "</div>\n",
     "<script>\n",
     "  // your javascript code goes here\n",
     "</script>"
@@ -391,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
