--- a/_notebooks/2023-08-30-basics-js-data-types.ipynb
+++ b/_notebooks/2023-08-30-basics-js-data-types.ipynb
@@ -1,7 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "---\n",
@@ -11,6 +11,7 @@
     "type: ccc\n",
     "permalink: /basics/datatypes\n",
     "author: Rohan Juneja\n",
+    "comments: true\n",
     "---"
    ]
   },
@@ -614,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -634,7 +635,21 @@
    ],
    "source": [
     "%%js\n",
-    "// put your javascript code here (make sure to run it and check your outputs in the console)"
+    "// put your javascript code here (make sure to run it and check your outputs in the console)\n",
+    "\n",
+    "console.log(\"Object: Myself\")\n",
+    "var obj = {\n",
+    "    name: \"Nathan Obodovski\",\n",
+    "    age: 15,\n",
+    "    current_classes: [\"AP Compsci, Honors Humanities 1, Spanish 4, AP Calc AB, AP World\"],\n",
+    "    interest: [gymanstics, coding],\n",
+    "    height: \"5'6\",\n",
+    "    weight: \"140 lbs\"\n",
+    "};\n",
+    "\n",
+    "console.log(obj);\n",
+    "delete obj.height;\n",
+    "delete obj.weight;"
    ]
   }
  ],
