--- a/_notebooks/2023-08-30-basics-js-data-types.ipynb
+++ b/_notebooks/2023-08-30-basics-js-data-types.ipynb
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -624,7 +624,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "// put your javascript code here (make sure to run it and check your outputs in the console)\n",
+      "application/javascript": "// put your javascript code here (make sure to run it and check your outputs in the console)\n\nconsole.log(\"Object: Myself\")\nvar obj = {\n    name: \"Nathan Obodovski\",\n    age: 15,\n    current_classes: [\"AP Compsci, Honors Humanities 1, Spanish 4, AP Calc AB, AP World\"],\n    interest: [\"gymnastics\", \"coding\"],\n    height: \"5'6\",\n    weight: \"140 lbs\",\n};\n\nvar greeting = \"Hello, World!\"\nconsole.log(obj);\ndelete obj.height;\ndelete obj.weight;\nconsole.log(obj)\n\nvar numbaI = 6\nconsole.log(\"Number 1: \" + numbaI)\nvar numbaII = 16\nconsole.log(\"Number 2: \" + numbaII)\nconsole.log(\"Number 2 - number 1:\")\nconsole.log(numbaII - numbaI)\nconsole.log(\"Obj is a(n) \" + typeof obj)\nconsole.log(\"NumbaI is a(n) \" + typeof numbaI)\nconsole.log(\"Greeting is a(n) \" + typeof greeting)\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -642,14 +642,26 @@
     "    name: \"Nathan Obodovski\",\n",
     "    age: 15,\n",
     "    current_classes: [\"AP Compsci, Honors Humanities 1, Spanish 4, AP Calc AB, AP World\"],\n",
-    "    interest: [gymanstics, coding],\n",
+    "    interest: [\"gymnastics\", \"coding\"],\n",
     "    height: \"5'6\",\n",
-    "    weight: \"140 lbs\"\n",
+    "    weight: \"140 lbs\",\n",
     "};\n",
     "\n",
+    "var greeting = \"Hello, World!\"\n",
     "console.log(obj);\n",
     "delete obj.height;\n",
-    "delete obj.weight;"
+    "delete obj.weight;\n",
+    "console.log(obj)\n",
+    "\n",
+    "var numbaI = 6\n",
+    "console.log(\"Number 1: \" + numbaI)\n",
+    "var numbaII = 16\n",
+    "console.log(\"Number 2: \" + numbaII)\n",
+    "console.log(\"Number 2 - number 1:\")\n",
+    "console.log(numbaII - numbaI)\n",
+    "console.log(\"Obj is a(n) \" + typeof obj)\n",
+    "console.log(\"NumbaI is a(n) \" + typeof numbaI)\n",
+    "console.log(\"Greeting is a(n) \" + typeof greeting)\n"
    ]
   }
  ],
@@ -669,7 +681,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
