improperly working DOM

--- a/_notebooks/2023-08-30-basics-js-with-html.ipynb
+++ b/_notebooks/2023-08-30-basics-js-with-html.ipynb
@@ -11,6 +11,7 @@
     "type: ccc\n",
     "permalink: /basics/dom\n",
     "author: Rohan Juneja\n",
+    "comments: true\n",
     "---"
    ]
   },
@@ -341,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -367,8 +368,14 @@
        "        <p></p>\n",
        "    </div>\n",
        "\n",
-       "    <script >\n",
-       "    const projectSwitch = document.getElementById('projectSwitcher');\n",
+       "    <script>\n",
+       "    \n",
+       "    </script>\n",
+       "</body>\n",
+       "</div>\n",
+       "<script>\n",
+       "  // your javascript code goes here\n",
+       "  const projectSwitch = document.getElementById('projectSwitcher');\n",
        "    const message = document.getElementById('message');\n",
        "    const basicButton = document.getElementById('basicTimer');\n",
        "    const pomodoroButton = document.getElementById('pomodoroTimer');\n",
@@ -388,15 +395,8 @@
        "        pomodoroButton.innerHTML = \"EWG\";\n",
        "        basicButton.innerHTML = \"INCIDecoder\";\n",
        "        message.innerHTML = 'Switched Back!';\n",
-       "    \n",
-       "    \n",
        "      }\n",
        "    });\n",
-       "    </script>\n",
-       "</body>\n",
-       "</div>\n",
-       "<script>\n",
-       "  // your javascript code goes here\n",
        "</script>\n"
       ],
       "text/plain": [
@@ -425,8 +425,14 @@
     "        <p></p>\n",
     "    </div>\n",
     "\n",
-    "    <script >\n",
-    "    const projectSwitch = document.getElementById('projectSwitcher');\n",
+    "    <script>\n",
+    "    \n",
+    "    </script>\n",
+    "</body>\n",
+    "</div>\n",
+    "<script>\n",
+    "  // your javascript code goes here\n",
+    "  const projectSwitch = document.getElementById('projectSwitcher');\n",
     "    const message = document.getElementById('message');\n",
     "    const basicButton = document.getElementById('basicTimer');\n",
     "    const pomodoroButton = document.getElementById('pomodoroTimer');\n",
@@ -446,15 +452,8 @@
     "        pomodoroButton.innerHTML = \"EWG\";\n",
     "        basicButton.innerHTML = \"INCIDecoder\";\n",
     "        message.innerHTML = 'Switched Back!';\n",
-    "    \n",
-    "    \n",
     "      }\n",
     "    });\n",
-    "    </script>\n",
-    "</body>\n",
-    "</div>\n",
-    "<script>\n",
-    "  // your javascript code goes here\n",
     "</script>"
    ]
   }
