--- a/_notebooks/2023-08-29-basics-of-js.ipynb
+++ b/_notebooks/2023-08-29-basics-of-js.ipynb
@@ -11,6 +11,7 @@
     "type: ccc\n",
     "permalink: /basics/javascript\n",
     "author: Rohan Juneja\n",
+    "comments: true\n",
     "---"
    ]
   },
@@ -510,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -523,10 +524,13 @@
        "<script>\n",
        "// put your javascript code here\n",
        "\n",
-       "var a = 16;\n",
-       "var b = 6;\n",
-       "\n",
        "console.log(\"Hacks: Comparing Values\");\n",
+       "\n",
+       "var a = 16;\n",
+       "console.log(\"a = \" + a)\n",
+       "var b = 6;\n",
+       "console.log(\"b = \" + b)\n",
+       "\n",
        "if (a > b) {\n",
        "    console.log(\"a is greater\");\n",
        "}\n",
@@ -545,10 +549,13 @@
     "<script>\n",
     "// put your javascript code here\n",
     "\n",
-    "var a = 16;\n",
-    "var b = 6;\n",
-    "\n",
     "console.log(\"Hacks: Comparing Values\");\n",
+    "\n",
+    "var a = 16;\n",
+    "console.log(\"a = \" + a)\n",
+    "var b = 6;\n",
+    "console.log(\"b = \" + b)\n",
+    "\n",
     "if (a > b) {\n",
     "    console.log(\"a is greater\");\n",
     "}\n",
