--- a/_notebooks/2023-09-15-1_4-python-errors.ipynb
+++ b/_notebooks/2023-09-15-1_4-python-errors.ipynb
@@ -12,6 +12,8 @@
     "categories: [C3.0, C5.0, C5.1, C5.2, C5.3, C5.4, C5.5, C5.6]\n",
     "type: ccc\n",
     "author: Sean Yeung\n",
+    "comments: true\n",
+    "permalink: /basics/python-errors\n",
     "---"
    ]
   },
@@ -290,8 +292,17 @@
     "## Hacks\n",
     "> Now is a good time to think about Testing of your teams final project...\n",
     "- What errors may arise in your project?\n",
+    "\n",
+    "I've encountered a lot of errors in my project, meaning that I've had to consult my peers, as well as ChatGPT numerous times. However, I am getting very quick at being able to identify and fix my issues on my own as of late.\n",
+    "\n",
     "- What are some test cases that can be used?\n",
+    "\n",
+    "You may print in the console with JavaScript, whether something ran or happened or not. My peer reccomended this to me as you can more clearly see exactly what's going wrong.\n",
+    "\n",
     "- Make sure to document any bugs you encounter and how you solved the problem.\n",
+    "\n",
+    "The vast majority of bugs I encounter, I fix by either consulting my teammates, or ChatGPT if they are unavailivble, and this has seemed to work swimmingly for me as I've been able to fix the multitude of issues I've come across.\n",
+    "\n",
     "- What are “single” tests that you will perform on your project? Or, your part of the project?\n",
     "    * As Hack Design and Test plan action … Divide these “single” tests into Issues for Scrum Board prior to coding. FYI, related tests could be in same Issue by using markdown checkboxes to separate tests."
    ]
