--- a/_notebooks/2023-09-28-review_ticket_6.ipynb
+++ b/_notebooks/2023-09-28-review_ticket_6.ipynb
@@ -14,6 +14,19 @@
     "type: tangibles\n",
     "---\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary of Accomplishments\n",
+    "\n",
+    "- Developed Web Programming Basics Test\n",
+    "- Encountered a lot of issues but have resolved them all from help of my peers and some use of ChatGPT\n",
+    "- Learned to use HTML to make projects and follow wireframes to create UIs\n",
+    "- Learned different data types and how to interact with each and print them to console via JavaScript\n",
+    "- Learned to combine HTML and JavaScript in the same project DOM, using onclick events to assign a button purpose\n"
+   ]
   }
  ],
  "metadata": {
