--- a/_notebooks/2023-09-28-project_ideas.ipynb
+++ b/_notebooks/2023-09-28-project_ideas.ipynb
@@ -21,7 +21,8 @@
    "source": [
     "## Projects I've already created:\n",
     "\n",
-    "- [My Python/HTML timer](https://nathaniel633.github.io/student//2023/09/27/timer_IPYNB_2_.html)"
+    "- [My Python/HTML timer](https://nathaniel633.github.io/student//2023/09/27/timer_IPYNB_2_.html)\n",
+    "- [My Pomodoro Timer (wip)](https://nathaniel633.github.io/student//2023/10/01/pomodoro_timer_IPYNB_2_.html)"
    ]
   }
  ],
