--- a/_notebooks/2023-08-29-basics-of-js.ipynb
+++ b/_notebooks/2023-08-29-basics-of-js.ipynb
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -532,7 +532,7 @@
        "console.log(\"b = \" + b)\n",
        "\n",
        "if (a > b) {\n",
-       "    console.log(\"a is greater\");\n",
+       "    console.log(a + \" is greater than \" + b);\n",
        "}\n",
        "</script>\n"
       ],
@@ -557,7 +557,7 @@
     "console.log(\"b = \" + b)\n",
     "\n",
     "if (a > b) {\n",
-    "    console.log(\"a is greater\");\n",
+    "    console.log(a + \" is greater than \" + b);\n",
     "}\n",
     "</script>"
    ]
