--- a/_notebooks/2023-10-09-week-8-plan.ipynb
+++ b/_notebooks/2023-10-09-week-8-plan.ipynb
@@ -10,7 +10,7 @@
     "toc: true\n",
     "comments: true\n",
     "courses: {compsci: {week: 8} }\n",
-    "type: hacks\n",
+    "type: plans\n",
     "---"
    ]
   }
