--- a/_notebooks/2023-10-12-iteration-homework.ipynb
+++ b/_notebooks/2023-10-12-iteration-homework.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25,11 +25,13 @@
      "text": [
       "Oh no! We need to replace Nathan's third period class\n",
       "['CSP', 'Humanities'], ...,  ['Calc', 'History']\n",
-      "['CSP', 'Humanities', 'amongus', 'Calc', 'History']\n"
+      "['CSP', 'Humanities', 'boobs', 'Calc', 'History']\n"
      ]
     }
    ],
    "source": [
+    "# Homework ack #1\n",
+    "\n",
     "print('Oh no! We need to replace Nathan\\'s third period class')\n",
     "\n",
     "list = ['CSP', \"Humanities\", 'Calc', 'History']\n",
@@ -41,6 +43,28 @@
     "list.insert(2, user_input)\n",
     "\n",
     "print(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Homework hack #2\n",
+    "\n",
+    "def fibonacci(x):\n",
+    "    if x==1:\n",
+    "        return(0) # First terminating statement (Needed to state the first number of the fibonacci sequence)\n",
+    "    if x == 2:\n",
+    "        return(1) # Second terminating statement (Since 0+0=0, we need to introduce integers to the sequence)\n",
+    "   \n",
+    "    else:\n",
+    "        return(fibonacci(x-1)+ fibonacci(x-2))\n",
+    "\n",
+    "\n",
+    "    for i in range(8):    \n",
+    "        print(fibonacci(i+1))\n"
    ]
   }
  ],
