--- a/_notebooks/2023-10-17-bullying.ipynb
+++ b/_notebooks/2023-10-17-bullying.ipynb
@@ -20,7 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Homework Problem 1\n"
+    "## Homework Problem 1\n",
+    "\n"
    ]
   }
  ],
