--- a/_notebooks/2023-10-25-lists-and-search.ipynb
+++ b/_notebooks/2023-10-25-lists-and-search.ipynb
@@ -10,7 +10,7 @@
     "toc: true\n",
     "comments: true\n",
     "courses: {compsci: {week: 10} }\n",
-    "type: plans\n",
+    "type: tangibles\n",
     "---"
    ]
   },
