--- a/_notebooks/2023-10-13-simulations.ipynb
+++ b/_notebooks/2023-10-13-simulations.ipynb
@@ -39,6 +39,9 @@
     "\n",
     "- Examples: Radar displays, RNG simulating variability, and weather forecasting\n",
     "\n",
+    "![Process_simulation](images/Process Simulation.jpeg)\n",
+    "\n",
+    "\n",
     "## Vocab:\n",
     "\n",
     "- Simulation abstraction - The little errors or unusual things that come up when running a simulation\n",
