final review commits

--- a/_notebooks/2023-11-06-trimester-overview.ipynb
+++ b/_notebooks/2023-11-06-trimester-overview.ipynb
@@ -6,18 +6,24 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: Final Project - Individual\n",
+    "title: Trimester Overview\n",
     "toc: true\n",
     "comments: true\n",
     "courses: {compsci: {week: 12} }\n",
-    "type: plans\n",
+    "type: tangibles\n",
     "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Weeks 0-3 Build a Lab Notebook\n",
+    "\n",
+    "# Weeks 4-7 Learn Language\n",
+    "\n",
+    "# Weeks 8-12 Web Application, Data, and N@tM"
+   ]
   }
  ],
  "metadata": {
