--- a/_notebooks/2023-11-06-passion-project-review.ipynb
+++ b/_notebooks/2023-11-06-passion-project-review.ipynb
@@ -332,6 +332,154 @@
     "\n",
     "During this passion project, I learned a lot about splitting up my time, as I worked with Aidan, Rayyan, and Daniel. We proved to be a very good team with a very personal connection with each other as well outside of the coding world, but we worked well together. We never had trouble assigning roles and getting done what needed to get done, despite time constraints and each other's setbacks. We each had our own roles which came with our own contributions. For me personally, I feel as if I could've contributed more on this project as did some of my other teammates, and I feel very guilty about this, but this is something I can take with me moving forward with my coding carreer, and I strive to be more prominent in group work. I don't think our passion project is perfect and I still think there is work to be done, and if we decide to pick it up again, I think it would be fun for the four of us to tune some things up on the project. Even for other future projects, I can take things that I've learned from this project including what went well, what didn't go well, and what I did to troubleshoot. I look forward to applying these skills in future timesters and in future courses, and maybe even later in life."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "      }\n",
+    "      \n",
+    "      .base-timer__label {\n",
+    "        position: absolute;\n",
+    "        width: 300px;\n",
+    "        height: 300px;\n",
+    "        top: 0;\n",
+    "        display: flex;\n",
+    "        align-items: center;\n",
+    "        justify-content: center;\n",
+    "        font-size: 48px;\n",
+    "      }\n",
+    "</style>\n",
+    "\n",
+    "<html>\n",
+    "    <div id=\"app\"></div>\n",
+    "</html>\n",
+    "\n",
+    "<script>\n",
+    "  const FULL_DASH_ARRAY = 283;\n",
+    "  const WARNING_THRESHOLD = 10;\n",
+    "  const ALERT_THRESHOLD = 5;\n",
+    "\n",
+    "  const COLOR_CODES = {\n",
+    "    info: {\n",
+    "      color: \"green\"\n",
+    "    },\n",
+    "    warning: {\n",
+    "      color: \"orange\",\n",
+    "      threshold: WARNING_THRESHOLD\n",
+    "    },\n",
+    "    alert: {\n",
+    "      color: \"red\",\n",
+    "      threshold: ALERT_THRESHOLD\n",
+    "    }\n",
+    "  };\n",
+    "\n",
+    "  const TIME_LIMIT = 20;\n",
+    "  let timePassed = 0;\n",
+    "  let timeLeft = TIME_LIMIT;\n",
+    "  let timerInterval = null;\n",
+    "  let remainingPathColor = COLOR_CODES.info.color;\n",
+    "\n",
+    "  document.getElementById(\"app\").innerHTML = `\n",
+    "  <div class=\"base-timer\">\n",
+    "    <svg class=\"base-timer__svg\" viewBox=\"0 0 100 100\" xmlns=\"http://www.w3.org/2000/svg\">\n",
+    "      <g class=\"base-timer__circle\">\n",
+    "        <circle class=\"base-timer__path-elapsed\" cx=\"50\" cy=\"50\" r=\"45\"></circle>\n",
+    "        <path\n",
+    "          id=\"base-timer-path-remaining\"\n",
+    "          stroke-dasharray=\"283\"\n",
+    "          class=\"base-timer__path-remaining ${remainingPathColor}\"\n",
+    "          d=\"\n",
+    "            M 50, 50\n",
+    "            m -45, 0\n",
+    "            a 45,45 0 1,0 90,0\n",
+    "            a 45,45 0 1,0 -90,0\n",
+    "          \"\n",
+    "        ></path>\n",
+    "      </g>\n",
+    "    </svg>\n",
+    "    <span id=\"base-timer-label\" class=\"base-timer__label\">${formatTime(\n",
+    "      timeLeft\n",
+    "    )}</span>\n",
+    "  </div>\n",
+    "  `;\n",
+    "\n",
+    "  startTimer();\n",
+    "\n",
+    "  function onTimesUp() {\n",
+    "    clearInterval(timerInterval);\n",
+    "  }\n",
+    "\n",
+    "  function startTimer() {\n",
+    "    timerInterval = setInterval(() => {\n",
+    "      timePassed = timePassed += 1;\n",
+    "      timeLeft = TIME_LIMIT - timePassed;\n",
+    "      document.getElementById(\"base-timer-label\").innerHTML = formatTime(\n",
+    "        timeLeft\n",
+    "      );\n",
+    "      setCircleDasharray();\n",
+    "      setRemainingPathColor(timeLeft);\n",
+    "\n",
+    "      if (timeLeft === 0) {\n",
+    "        onTimesUp();\n",
+    "      }\n",
+    "    }, 1000);\n",
+    "  }\n",
+    "\n",
+    "  function formatTime(time) {\n",
+    "    const minutes = Math.floor(time / 60);\n",
+    "    let seconds = time % 60;\n",
+    "\n",
+    "    if (seconds < 10) {\n",
+    "      seconds = `0${seconds}`;\n",
+    "    }\n",
+    "\n",
+    "    return `${minutes}:${seconds}`;\n",
+    "  }\n",
+    "\n",
+    "  function setRemainingPathColor(timeLeft) {\n",
+    "    const { alert, warning, info } = COLOR_CODES;\n",
+    "    if (timeLeft <= alert.threshold) {\n",
+    "      document\n",
+    "        .getElementById(\"base-timer-path-remaining\")\n",
+    "        .classList.remove(warning.color);\n",
+    "      document\n",
+    "        .getElementById(\"base-timer-path-remaining\")\n",
+    "        .classList.add(alert.color);\n",
+    "    } else if (timeLeft <= warning.threshold) {\n",
+    "      document\n",
+    "        .getElementById(\"base-timer-path-remaining\")\n",
+    "        .classList.remove(info.color);\n",
+    "      document\n",
+    "        .getElementById(\"base-timer-path-remaining\")\n",
+    "        .classList.add(warning.color);\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  function calculateTimeFraction() {\n",
+    "    const rawTimeFraction = timeLeft / TIME_LIMIT;\n",
+    "    return rawTimeFraction - (1 / TIME_LIMIT) * (1 - rawTimeFraction);\n",
+    "  }\n",
+    "\n",
+    "  function setCircleDasharray() {\n",
+    "    const circleDasharray = `${(\n",
+    "      calculateTimeFraction() * FULL_DASH_ARRAY\n",
+    "    ).toFixed(0)} 283`;\n",
+    "    document\n",
+    "      .getElementById(\"base-timer-path-remaining\")\n",
+    "      .setAttribute(\"stroke-dasharray\", circleDasharray);\n",
+    "  }\n",
+    "</script>\n",
+    "\n",
+    "# Project takeaways\n",
+    "\n",
+    "During this passion project, I learned a lot about splitting up my time, as I worked with Aidan, Rayyan, and Daniel. We proved to be a very good team with a very personal connection with each other as well outside of the coding world, but we worked well together. We never had trouble assigning roles and getting done what needed to get done, despite time constraints and each other's setbacks. We each had our own roles which came with our own contributions. For me personally, I feel as if I could've contributed more on this project as did some of my other teammates, and I feel very guilty about this, but this is something I can take with me moving forward with my coding carreer, and I strive to be more prominent in group work. I don't think our passion project is perfect and I still think there is work to be done, and if we decide to pick it up again, I think it would be fun for the four of us to tune some things up on the project. Even for other future projects, I can take things that I've learned from this project including what went well, what didn't go well, and what I did to troubleshoot. I look forward to applying these skills in future timesters and in future courses, and maybe even later in life."
+   ]
   }
  ],
  "metadata": {
