--- a/_notebooks/2023-10-12-iteration-homework.ipynb
+++ b/_notebooks/2023-10-12-iteration-homework.ipynb
@@ -25,7 +25,7 @@
      "text": [
       "Oh no! We need to replace Nathan's third period class\n",
       "['CSP', 'Humanities'], ...,  ['Calc', 'History']\n",
-      "['CSP', 'Humanities', 'boobs', 'Calc', 'History']\n"
+      "['CSP', 'Humanities', 'Spanish', 'Calc', 'History']\n"
      ]
     }
    ],
