--- a/_notebooks/2023-10-29-week-11-plan.ipynb
+++ b/_notebooks/2023-10-29-week-11-plan.ipynb
@@ -10,7 +10,7 @@
     "toc: true\n",
     "comments: true\n",
     "courses: {compsci: {week: 11} }\n",
-    "type: tangibles\n",
+    "type: plans\n",
     "---"
    ]
   }
