--- a/_notebooks/2023-11-29-internet.ipynb
+++ b/_notebooks/2023-11-29-internet.ipynb
@@ -18,15 +18,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Part 1: Bandwidth\n",
+    "> IP Addresses\n",
     "\n",
-    "In the context of computer networks, elaborate on the concept of bandwidth. Discuss how bandwidth influences the speed and efficiency of data transfer. Provide examples of scenarios where both high and low bandwidth can impact the performance of internet connected devices.\n",
+    "1. Which of the following IP Addresses are possible? Explain (yes/no) for each answer choice.\n",
     "\n",
-    "- Bandwidth is the concept\n",
+    "- 1.1.1.1.1 no, IP addresses can only have 4 sections, and this one has 5\n",
+    "- 23.23.23.23 yes, this has 4 sections with each under 255\n",
+    "- 134.492.100.0 no, 492 > 255\n",
+    "- 255.256.55.255 no, 256 > 255\n",
+    "- 2.93.255.19 yes, all 4 numbers are within 255\n",
     "\n",
-    "> Part 2: Computer Network\n",
+    "2. If Dian Du is at home on his home network and sends a message to every computer on the network, what is this an example of? Explain.\n",
     "\n",
-    "Explore computer networks by detailing the key components and their interplay. Discuss the significance of scalability, security, and reliability in designing computer networks. Provide real-world examples of how different types of computer networks, such as local area networks (LANs) and wide area networks (WANs), serve distinct purposes in various settings."
+    "This is an example of broadcast, as this message is being sent to every single device connected to the home network, not just a select few.\n",
+    "\n",
+    "> Models\n",
+    "\n",
+    "1. Three of the four following protocols are on the same layer. Identify which ones and what layer they are on, and why they are on each layer: \n",
+    "\n",
+    "ASCII: application layer, as it is used by applications to encode and decode text\n",
+    "FTP: application layer, as it is responsible for the transfer of files on an application level\n",
+    "TLS: application layer, as it is responisble for encrypting the data being transported\n",
+    "USB: Data link/physical layer, as it is hardware and provides the connection of data physically\n",
+    "\n",
+    "2. Telnet is a internet protocol which allows remote access to other computers over a local network or the internet. What layer of the OSI model would this protocol be located on? What is the function of this layer?\n",
+    "\n",
+    "Telnet would be on the application layer as it serves to provide remote access for users. The application layer connects network to software on the computer.\n",
+    "\n",
+    "> DNS\n",
+    "\n",
+    "1. Bob wants to use the domain bob.is.the.best.com. What domain should he buy from a DNS provider (assume it is available)? What would be the subdomains?\n",
+    "\n",
+    "best.com is the domain and \"bob + is + the: are the subdomains.\n",
+    "\n",
+    "> HTTP and HTTPS\n",
+    "\n",
+    "1. What is a difference between HTTP and HTTPS?\n",
+    "\n",
+    "HTTPS is more secure, having secure as part of its acronym. This means that it's encrypted and isn't suseptable to third-party interference.\n",
+    "\n",
+    "- What protocol does HTTPS use that HTTP doesn’t?\n",
+    "\n",
+    "HTTPS can uses TLS (Transport Layer Security) to ensure its security\n",
+    "\n",
+    "2. Last trimester we sent HTTP requests for our passion projects\n",
+    "\n",
+    "- Did we use HTTP or HTTPS?\n",
+    "\n",
+    "We used HTTP\n",
+    "\n",
+    "- What are the benefits and disadvantages of this?\n",
+    "\n",
+    "It was quicker and easier to set up, however it is easier to infiltrate as it is missing that extra level of security. However, as an AP CSP class in some random high school, we had no worry about infiltrators.\n",
+    "\n",
+    "> TCP and UDP\n",
+    "\n",
+    "1. Bob is setting up a video streaming service, and he needs the stream to be real time.\n",
+    "\n",
+    "- What protocol should he use, TCP or UDP? Why?\n",
+    "\n",
+    "Bob needs to use UDP, as he needs his stream to be in real-time, with that being more important than the quality of the video\n",
+    "\n",
+    "- What are some cons of this protocol? Give an example of a potential issue.\n",
+    "\n",
+    "This protocol can be bad when trying to ensure that something is of very good quality. A potential issue is if you are trying to watch a movie with somewhat low bandwidth/connection. This protocol will instead make sure the video is constantly playing, even if that means you cannot make out the picture, due to the lack of quality.\n",
+    "\n",
+    "2. TCP has error checking, which ensures that all packets arrive properly. Why is this important?\n",
+    "\n",
+    "Error checking is important because TCP needs to ensure the quality of data, and if not all packets arrive properly, some elements could be distorted to varying lengths.\n",
+    "\n",
+    "- Give an example of how TCP ensures that there are no errors.\n",
+    "\n",
+    "TCP uses checksum to perform a series of checks to make sure all information is there and completely correct. The checksum is a numerical value based on calculations using the binary digits.\n",
+    "\n",
+    "3. Server A computer is communicating with Server B. They have already initiated communication and Server A is now attempting to send data to Server B.\n",
+    "\n",
+    "-   How does Server B ensure that they have received any sent packets before Server A continues sending packets in TCP? In UDP?\n",
+    "\n",
+    "In TCP, Server B employs ACK (acknowledgement). When Server B recieves a packet from Server A, Server B sends back an acknowledgement to Server A to let them know it's been received. In UDP, no such mechanism exists. Due to the nature of UDP, Server B will keep receiving information from Server A without any sort of confirmation that all packets have been received.\n",
+    "\n",
+    "- What is another use of this?\n",
+    "\n",
+    "In the case of file transfer, TCP is more commonly used as it is especially important that you have every part of a file, and aren't missing pieces, which could lead to corruption."
    ]
   }
  ],
