--- a/_notebooks/2023-12-05-routing-computing-HW.ipynb
+++ b/_notebooks/2023-12-05-routing-computing-HW.ipynb
@@ -32,7 +32,11 @@
     "\n",
     "> Question 4: What is the term called when a network has multiple paths leading up to one destination? (Used in fault-tolerant systems)\n",
     "\n",
-    "- Redundant routing"
+    "- Redundant routing\n",
+    "\n",
+    "> Question 5: Using the image above, is this fault tolerant?\n",
+    "\n",
+    "- Yes, this is fault tolerant, as if you cut any strand, all strands all still connected"
    ]
   }
  ],
