--- a/_notebooks/2023-12-07-digital-divide-hw.ipynb
+++ b/_notebooks/2023-12-07-digital-divide-hw.ipynb
@@ -13,6 +13,87 @@
     "type: tangibles\n",
     "---"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## HW:\n",
+    "**1. Which of the following contributes to the digital divide?**\n",
+    "\n",
+    "I: Cost of technology\n",
+    "\n",
+    "II: Access for the disabled\n",
+    "\n",
+    "III: Lack of education\n",
+    "\n",
+    "IV: Lower-performance computers\n",
+    "\n",
+    "A. I and II only\n",
+    "\n",
+    "B. I, II, and III only\n",
+    "\n",
+    "C. I, II, III, and IV\n",
+    "\n",
+    "D. None of the above\n",
+    "\n",
+    "\n",
+    "| C. I, II, III, and IV\n",
+    "\n",
+    " \n",
+    "**2. One of the following is NOT an effect of the digital divide.**\n",
+    "\n",
+    "A - Online polls underrepresent rural areas.\n",
+    "\n",
+    "B - Certain problems are not possible to solve in a reasonable time, so\n",
+    "approximate solutions are used.\n",
+    "\n",
+    "C - Twitter opinions are over-representative of young and urban people\n",
+    "\n",
+    "D - Senior citizens are less trained to access online resources during\n",
+    "\n",
+    "\n",
+    "| B, because the amount of time something takes has nothing to do with the demographic of people that it reaches.\n",
+    "\n",
+    "\n",
+    "**3. Pat the Billionaire reads about the digital divide and wants to do something to improve it. Which of the following would be the best?**\n",
+    "\n",
+    "A - Use twitter to tweet helpful computer hints to people who do not know\n",
+    "how to use computers\n",
+    "\n",
+    "B - Establish a free internet service for workers at New York City financial\n",
+    "institutions\n",
+    "\n",
+    "C - Build internet infrastructure for rural cities in the United States\n",
+    "\n",
+    "D - Build a new skyscraper with ultra-fast internet for office workers working at Amazon\n",
+    "\n",
+    "\n",
+    "| C, oftentimes people living in rural cities don't have a great connection, so providing them with internet infrastructure will likely make their lives a lot easier\n",
+    "\n",
+    "\n",
+    "**4. One of these is FALSE. Which?**\n",
+    "\n",
+    "A - A for-profit company could help reduce the digital divide by offering reduced pricing to geographically remote areas.\n",
+    "\n",
+    "B - A non-profit company can help reduce the digital divide by refurbishing phones and donating them to low-income areas.\n",
+    "\n",
+    "C - A movie celebrity could eliminate the digital divide in a city by donating enough money to pay for free computers and wireless hotspots.\n",
+    "\n",
+    "D - A for-profit company could help reduce the digital divide by paying for\n",
+    "tutors for introductory computer science classes at schools around the state\n",
+    "\n",
+    "\n",
+    "| C, the people are already in a city, so the cities have low digital divide, so they don't need the new infrastructure to help them.\n",
+    "\n",
+    "\n",
+    "**Extra Credit:**\n",
+    "Write a few sentences answering the prompt (90%+):\n",
+    "How can you help end the digital divide?\n",
+    "\n",
+    "To help end the digital divide, I can spread awareness about it by talking with peers and friends and family. I could join clubs at school that could raise fundraisers for change. I could also voulenteer for events dealing with the digital divide. To make change happen, I must monitor my own actions surrounding my use of devices."
+   ]
   }
  ],
  "metadata": {
