--- a/_notebooks/2023-12-05-Digital-Divide.ipynb
+++ b/_notebooks/2023-12-05-Digital-Divide.ipynb
@@ -254,7 +254,12 @@
     "\n",
     "**Extra Credit:**\n",
     "Write a few sentences answering the prompt (90%+):\n",
-    "How can you help end the digital divide?"
+    "How can you help end the digital divide?\n",
+    "\n",
+    "To help end the digital divide, I can promote internet access by advocating for more widespread internet access, especially among less populated and remote areas, and help lower the price of internet access. I can volunteer with or support local community organizations working to provide internet access and digital resources to underserved populations. I can contribute to programs that provide refurbished or donated devices to individuals and communities in need. I can volunteer to teach digital literacy skills to individuals who may lack the necessary knowledge to use digital tools effectively. I can support educational programs that integrate digital skills training into school curricula, especially in underserved areas. I can advocate for policies that address the root causes of the digital divide, such as socioeconomic disparities and inadequate infrastructure. I can encourage collaboration between governments, non-profit organizations, and private companies to create initiatives that bridge the digital divide. I can support initiatives that leverage mobile technologies to provide internet access in areas with limited infrastructure. I can support and promote public spaces like libraries and community centers that provide free or low-cost internet access and digital resources. I can contribute to or support programs that aim to include marginalized communities in the digital landscape, ensuring that everyone has the opportunity to benefit from technological advancements. I can contribute to or support research efforts that identify specific challenges and demographics affected by the digital divide, helping to inform targeted interventions. I can use my influence to raise awareness about the digital divide and its implications for societal progress. I can encourage public discourse on the importance of equal access to digital resources using services such as Instagram or Snapchat.\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
