--- a/_notebooks/2023-12-14-Class_6_Crowdsourcing.ipynb
+++ b/_notebooks/2023-12-14-Class_6_Crowdsourcing.ipynb
@@ -136,13 +136,23 @@
     "\n",
     "1. Explain the role of data crowdsourcing in machine learning projects. Provide an example of an application where image labeling by a crowd contributes to the improvement of machine learning models.\n",
     "\n",
+    "- Machine learning projects need a vast assortment of input to learn for themselves and get better, so they need to utilize crowsourcing to get the variety of images or text or some type of input dependent on purpose. An example of an application using image labeling could be Captcha's identification of Buses. For this system to work, captcha scans a variety of images and is able to identify which ones are buses to give you an assorment of busses and other cars/streets.\n",
+    "\n",
     "2. Compare and contrast the benefits and challenges of data crowdsourcing with regard to tasks like sentiment analysis and data verification. How does the diversity of contributors enhance the overall quality of the collected data?\n",
+    "\n",
+    "- The benefits of data crowdsourcing with regard to sentiment analysis include the fact that a wide variety of input will always make a better program to indentify emotion. The challenges of data crowdsourcing with regard to sentiment analysis include that of the general challenge of decyphering emotion through vague text. Some benefits of data crowdcourcing with regard to data verification include the accuracy of the verification, facilitating through many pairs of eyes. A disadvantage includes bias that the contributors may have.\n",
     "\n",
     "3. Choose an open-source project mentioned in the examples, such as the Linux operating system or WordPress. Discuss the significance of global collaboration in the development of open-source software. Highlight one specific advantage and one challenge faced by open-source projects.\n",
     "\n",
+    "- The significance of global collaboration with the example of Linux OS is the fact that its been used since 1991 to be altered globally as an open source program. An advantage of this can be the diversity of epertise, as many ideas can come together to benefit the product and combine the best. A challenge the Linux team might face could be the collaboration and communication of the project, working together to get similar ideas on board.\n",
+    "\n",
     "4. In microtask crowdsourcing, tasks are broken down into small units for contributors to complete. Explain how platforms like Amazon Mechanical Turk utilize microtask crowdsourcing. Discuss one advantage and one challenge associated with the microtask approach.\n",
     "\n",
-    "5. Explore Kaggle and find a database that would be useful for a CPT Project idea you have. Briefly discuss its potential purpose in your project."
+    "- Amazon Mechanical Turk utilizes microtask crowdsourcing to get certain jobs done by splitting them up into smaller parts, distributing them, and rewarding Turks with compensation. An advantage of this is the speed and efficiency of the overall project, getting tasks done a lot quicker. A challenge could include the quality of the whole project. Including many small portions made by different collaborators could lead to an inconsistency of the quality when put altogether.\n",
+    "\n",
+    "5. Explore Kaggle and find a database that would be useful for a CPT Project idea you have. Briefly discuss its potential purpose in your project.\n",
+    "\n",
+    "- With my CPT Project, we are attempting to make a multiplayer turn-based videogame, so incorporating a database that could help create an opponent powered by AI could be scouted by searching the Kaggle databases."
    ]
   }
  ],
