--- a/_notebooks/2023-12-14-Class_6_Crowdsourcing.ipynb
+++ b/_notebooks/2023-12-14-Class_6_Crowdsourcing.ipynb
@@ -8,10 +8,10 @@
     "toc: true\n",
     "comments: true\n",
     "layout: post\n",
-    "title: 5.4 Crowd-sourcing\n",
+    "title: Crowd-sourcing HW\n",
     "description: Crowd-sourcing lesson\n",
-    "type: hacks\n",
-    "courses: { compsci: {week: 16} }\n",
+    "type: tangibles\n",
+    "courses: { compsci: {week: 17} }\n",
     "---"
    ]
   },
